--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.16"
   }
 }
