--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "nes.icons": "^2.0.1",
     "react": "^18.1.0",
     "react-calendar": "^3.7.0",
     "react-dom": "^18.1.0",
+    "react-easy-crop": "^4.4.0",
     "react-icons": "^4.4.0",
     "react-places-autocomplete": "^7.3.0",
     "react-responsive": "^9.0.0-beta.10",
